--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         -webkit-backdrop-filter: blur(0);
         border: 1px solid rgba(255, 255, 255, 0.155);
     }
+
   </style>
 </head>
 <body>
@@ -25,7 +26,7 @@
       <div class="relative w-72">
         <input id="city-input" value="dhaka" type="text" placeholder="Enter city name" class="search-input w-full py-2 px-5 bg-transparent border rounded outline-0" />
 
-        <div class="cityList opacity-0 invisible absolute top-full  left-0 z-40 rounded-br-md rounded-bl-md w-full max-h-[250px] overflow-y-scroll bg-[#848282]  p-3 flex flex-col gap-[1px]">
+        <div class="cityList show opacity-0 invisible absolute top-full  left-0 z-40 rounded-br-md rounded-bl-md w-full max-h-[250px] overflow-y-scroll bg-[#848282]  p-3 flex flex-col gap-[1px]">
            
         </div>
       </div>
