--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
       <div class="relative w-72">
         <input id="city-input" value="dhaka" type="text" placeholder="Enter city name" class="search-input w-full py-2 px-5 bg-transparent border rounded outline-0" />
 
-        <div class="cityList show opacity-0 invisible absolute top-full  left-0 z-40 rounded-br-md rounded-bl-md w-full max-h-[250px] overflow-y-scroll bg-[#848282]  p-3 flex flex-col gap-[1px]">
+        <div class="cityList show opacity-0 invisible mt-1 absolute top-full  left-0 z-40 rounded-br-md rounded-bl-md w-full max-h-[250px] overflow-y-scroll bg-[#1d1d1d] text-white flex flex-col gap-[1px]">
            
         </div>
+        <span id="search-button" class=" absolute top-0 right-0 search-button py-2 px-3 rounded cursor-pointer"><i class="fa-solid fa-magnifying-glass"></i></span>
       </div>
-      <button id="search-button" class="search-button bg-[blue] py-2 px-5 rounded cursor-pointer">Search</button>
     </div>
 
     <div id="weather-result" class="weather-result">
