--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
             <span class="showTime text-[#b9b8b8]"></span>
           </div>
 
-          <div class="flex gap-4 my-5">
-            <span>Now</span>
+          <div class="flex gap-x-4 my-5">
+            <span class="bg-red-500 h-6 px-1">Now</span>
             <div class="flex items-start">
               <span class="temp text-5xl">17.5°</span>
               <span class="text-2xl mt-1">C</span>
