--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           </div>
 
           <div class="flex gap-x-4 my-5">
-            <span class="bg-red-500 h-6 px-1">Now</span>
+            <span class="bg-red-500 h-6 px-1 animate-pulse">Now</span>
             <div class="flex items-start">
               <span class="temp text-5xl">17.5°</span>
               <span class="text-2xl mt-1">C</span>
