--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
             <span class="showTime text-[#b9b8b8]"></span>
           </div>
 
-          <div class="flex gap-x-4 my-5">
+          <div class="flex gap-x-4 my-5 flex-wrap">
 
             <span class="bg-red-500 h-6 px-1 animate-pulse">Now</span>
 
-            <div class="images"></div>
             <div class="flex items-start">
+              <div class="images mx-3"></div>
               <span class="temp text-5xl">17.5°</span>
               <span class="text-2xl mt-1">C</span>
             </div>
