--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <span class="bg-red-500 h-6 px-1 animate-pulse">Now</span>
 
             <div class="flex items-start">
-              <div class="images mx-3"></div>
+              
+              <div class="sunMoon mx-3"></div>
+
               <span class="temp text-5xl">17.5°</span>
               <span class="text-2xl mt-1">C</span>
             </div>
